# puls-kernel-mgr

./: .gitignore  CHANGELOG.md  README.md  puls-kernel-mgr  puls-kernel-mgr-gtk  pyproject.toml  setup.py
debian/: changelog  com.puls.kernelmgr.metainfo.xml  control  copyright  install  postinst  puls-kernel-mgr.desktop  rules
puls_kernel_mgr/: __init__.py
puls_kernel_mgr/cli/: main.py
puls_kernel_mgr/core/: grub.py  grub_backup.py  kconfig.py  kernel.py  os_detect.py  safety.py  security.py
puls_kernel_mgr/gui/: main.py
