[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "puls-kernel-mgr"
version = "0.1.1"
description = "Linux Custom Kernel/GRUB Manager"
authors = [
    {name = "Barın Güzeldemirci", email = "baringuzeldemir@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "beautifulsoup4", 
    "simple-term-menu", 
    "rich", 
]

[project.scripts]
puls-kernel-mgr = "puls_kernel_mgr.cli.main:main"
puls-kernel-mgr-gtk = "puls_kernel_mgr.gui.main:main"
